# tfplan-analyzer

./: README.md  main.py  pyproject.toml
tfplan_analyzer/: cmd.py  diff.py  models.py
