[tool.poetry]
name = "tfplan-analyzer"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <info@busykoala.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pydantic = "^2.7.3"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
